--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-TOKEN="5408801300:AAGDGGTh92QQiUmKCx5qx2f8qvGrrwidGtQ"
+TOKEN=<TOKEN-HERE>
 PORT=3000
 API_URL="https://espriapi.azurewebsites.net/api/HttpTriggerCSharp?method=guldur"
